--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,6 @@
 name: CI
 
 on:
-  push:
   pull_request:
 
 jobs:
@@ -9,7 +8,7 @@ jobs:
     name: Run Tests
     strategy:
       matrix:
-        day: [day01]
+        day: [day01, day02]
     uses: ./.github/workflows/test-day.yml
     with:
       day: ${{ matrix.day }} 
