--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     name: Run Tests
     strategy:
       matrix:
-        day: [day01, day02]
+        day: [day01, day02, day03]
     uses: ./.github/workflows/test-day.yml
     with:
       day: ${{ matrix.day }} 
